Small Flat Grey style fix - don't let screenlet contents spill out of screenlet. Fixes the layout in screens where a screenlet contains a table that is very wide.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1064947 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/flatgrey/webapp/flatgrey/maincss.css
+++ b/themes/flatgrey/webapp/flatgrey/maincss.css
@@ -475,6 +475,7 @@ border-left: 0.1em solid #ccc;
 height: auto !important;
 height: 1%;
 margin-bottom: 1em;
+overflow: auto;
 }
 
 .screenlet-body {
